{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 141,
  "lineage": "7c58428d-6919-68bf-92b8-850c0e6fac61",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac7138f1f6855aa3",
            "domain": "vpc",
            "id": "eipalloc-0ac7138f1f6855aa3",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-206-224-11.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.224.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09370aaae4ff66a46",
            "domain": "vpc",
            "id": "eipalloc-09370aaae4ff66a46",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-3-104-73-78.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.73.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:internet-gateway/igw-0b9707a064ca07302",
            "id": "igw-0b9707a064ca07302",
            "owner_id": "495677365376",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-igw"
            },
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:loadbalancer/app/dotnet-sample-dev/a7d356ba7dd4fb60",
            "arn_suffix": "app/dotnet-sample-dev/a7d356ba7dd4fb60",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dotnet-sample-dev-350053109.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:loadbalancer/app/dotnet-sample-dev/a7d356ba7dd4fb60",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dotnet-sample-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03d2f6a9f3c14eda3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0df85bbff62bfa3c9"
              },
              {
                "subnet_id": "subnet-0fe378dfd6295dbbb"
              }
            ],
            "subnets": [
              "subnet-0df85bbff62bfa3c9",
              "subnet-0fe378dfd6295dbbb"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev"
            },
            "vpc_id": "vpc-0cc93c11a2c7dabf3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:listener/app/dotnet-sample-dev/a7d356ba7dd4fb60/d17d82db899cbb1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:targetgroup/dotnet-sample-dev-tenant2/7ebee53e5c14d41d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:listener/app/dotnet-sample-dev/a7d356ba7dd4fb60/d17d82db899cbb1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:loadbalancer/app/dotnet-sample-dev/a7d356ba7dd4fb60",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.tenant",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tenant1",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:targetgroup/dotnet-sample-dev-tenant1/9c32ceb0fd77bf3e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:listener-rule/app/dotnet-sample-dev/a7d356ba7dd4fb60/d17d82db899cbb1c/653ddd565954f4e4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tenant1.definitiv.com.au"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:listener-rule/app/dotnet-sample-dev/a7d356ba7dd4fb60/d17d82db899cbb1c/653ddd565954f4e4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:listener/app/dotnet-sample-dev/a7d356ba7dd4fb60/d17d82db899cbb1c",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.tenant",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tenant1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:targetgroup/dotnet-sample-dev-tenant1/9c32ceb0fd77bf3e",
            "arn_suffix": "targetgroup/dotnet-sample-dev-tenant1/9c32ceb0fd77bf3e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:targetgroup/dotnet-sample-dev-tenant1/9c32ceb0fd77bf3e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dotnet-sample-dev-tenant1",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-tenant1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-tenant1"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "tenant2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:targetgroup/dotnet-sample-dev-tenant2/7ebee53e5c14d41d",
            "arn_suffix": "targetgroup/dotnet-sample-dev-tenant2/7ebee53e5c14d41d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495677365376:targetgroup/dotnet-sample-dev-tenant2/7ebee53e5c14d41d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dotnet-sample-dev-tenant2",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-tenant2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-tenant2"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac7138f1f6855aa3",
            "association_id": "eipassoc-0967f0262fbfcfe00",
            "connectivity_type": "public",
            "id": "nat-076a5e37a6a3d49d4",
            "network_interface_id": "eni-0cbdf9bd629055e15",
            "private_ip": "10.0.0.11",
            "public_ip": "54.206.224.11",
            "subnet_id": "subnet-0fe378dfd6295dbbb",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09370aaae4ff66a46",
            "association_id": "eipassoc-00299a341506a9058",
            "connectivity_type": "public",
            "id": "nat-0babcf3b8bef9f659",
            "network_interface_id": "eni-032232a228f8257ec",
            "private_ip": "10.0.1.181",
            "public_ip": "3.104.73.78",
            "subnet_id": "subnet-0df85bbff62bfa3c9",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:route-table/rtb-04ba6b8637e033ed2",
            "id": "rtb-04ba6b8637e033ed2",
            "owner_id": "495677365376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-076a5e37a6a3d49d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:route-table/rtb-0f14e6474d10611e2",
            "id": "rtb-0f14e6474d10611e2",
            "owner_id": "495677365376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0babcf3b8bef9f659",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:route-table/rtb-05d49b67cd3b67ca0",
            "id": "rtb-05d49b67cd3b67ca0",
            "owner_id": "495677365376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9707a064ca07302",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020626c62f0829eb5",
            "route_table_id": "rtb-04ba6b8637e033ed2",
            "subnet_id": "subnet-07d4f96717d0f98d2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cb3628f09b5001c",
            "route_table_id": "rtb-0f14e6474d10611e2",
            "subnet_id": "subnet-01dd5914f15ef9291"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b185190e1aac79ce",
            "route_table_id": "rtb-05d49b67cd3b67ca0",
            "subnet_id": "subnet-0fe378dfd6295dbbb"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd95d9f6ac16c1c8",
            "route_table_id": "rtb-05d49b67cd3b67ca0",
            "subnet_id": "subnet-0df85bbff62bfa3c9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:security-group/sg-03d2f6a9f3c14eda3",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d2f6a9f3c14eda3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dotnet-sample-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "495677365376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:security-group/sg-0508dae46dc1db9bf",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0508dae46dc1db9bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d2f6a9f3c14eda3"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dotnet-sample-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "495677365376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:security-group/sg-0dec0b408067d765b",
            "description": "Security group for RDS SQL Server instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dec0b408067d765b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0508dae46dc1db9bf"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "dotnet-sample-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "495677365376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:subnet/subnet-07d4f96717d0f98d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d4f96717d0f98d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495677365376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-1"
            },
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:subnet/subnet-01dd5914f15ef9291",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dd5914f15ef9291",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495677365376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-private-2"
            },
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:subnet/subnet-0fe378dfd6295dbbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe378dfd6295dbbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495677365376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-public-1"
            },
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:subnet/subnet-0df85bbff62bfa3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df85bbff62bfa3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495677365376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-public-2"
            },
            "vpc_id": "vpc-0cc93c11a2c7dabf3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495677365376:vpc/vpc-0cc93c11a2c7dabf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe3844ded365649b",
            "default_route_table_id": "rtb-0ef3a20c370b67640",
            "default_security_group_id": "sg-0efe4012e73bbdce1",
            "dhcp_options_id": "dopt-01b5a38b985e37aed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc93c11a2c7dabf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef3a20c370b67640",
            "owner_id": "495677365376",
            "tags": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dotnet-sample-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}